# jupiterweb-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: institutos.json
jupiter/: __init__.py  disciplina.py  instituto.py  jupiterweb.py  urls.py  utils.py
jupiterweb/: __init__.py  disciplina.py  instituto.py  paths.py
jupiterweb/data/: institutos.json
