[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupiterweb-scraper"
version = "0.1.0"
description = "Extração de informações sobre disciplinas da Universidade de São Paulo a partir do Jupiterweb"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Davi Golebiovski", email = "davi.gole@imejr.com" },
    { name = "Isaque Nascimento", email = "isaque.nascimento@imejr.com" },
    { name = "Lucas Kevin Silva Muniz", email = "lucas.muniz@imejr.com" },
]
keywords = ["usp", "jupiterweb", "scraper", "universidade", "web", "university"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.34.2",
    "beautifulsoup4>=4.15.0",
]

[project.urls]
Repository = "https://github.com/davigole/jupiterweb-scraper"
Issues = "https://github.com/davigole/jupiterweb-scraper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jupiterweb*"]

[tool.setuptools.package-data]
jupiterweb = ["data/*"]
